--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
 
 <body>
     <img src="altschool_image.jpg" alt="altschool img" width="100" height="100" />
+    
+    <ul>
+        <li><a href="mailto:martinaolayidemartins25@gmail.com">Email</a></li>
+        <li><a href="tel:+23470987635">Contact</a></li>
+        <li><a href="form.html"> <button>Sign Up</button></a></li>
+    </ul>
+    
     <h1>About Myself</h1>
     <p>My name is Martina Olayide-Martins. I am currently a student of Altschool Africa.
         My student id number is ALT/SOE/023/2531.
     </p>
 
     <p>
-        I am working class lady. I currently work as a flight Attendant. I have a bsc in public Management
+        I am working class lady. I currently work as a flight Attendant. I have a bsc in Public Management
         from Skopje University. I am from Lagos, Nigeria.
     </p>
     <p>I have enrolled in altschool africa because I am looking to change career path and I believe I will
@@ -28,7 +35,7 @@
         along the way.
     </p>
 
-    <a href="form.html"> <button>Next Page</button></a>
+    <a href="form.html"> <button>Sign Up</button></a>
 </body>
 
 </html>
